Automatically backed up by Learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,9 +3,13 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <br />
+
+  <%= f.text_field :author_name, list: "authors_autocomplete" %>
+  <datalist id="authors_autocomplete">
+    <% Author.all.each do |author| %>
+      <option value="<%= author.name %>">
+    <% end %>
+  </datalist>
 
   <%= f.submit %>
 <% end %>
-
-
