--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -13,5 +13,8 @@
 
   <%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
+  <input id="song_notes_1" name="song[note_ids][]">
+  <input id="song_notes_2" name="song[note_ids][]">
+
   <%= f.submit %>
 <% end %>
