--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -14,7 +14,7 @@
   <%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
   <input id="song_notes_1" name="song[note_contents][]">
-  <input id="song_notes_2" name="song[notes_contents][]">
+  <input id="song_notes_2" name="song[note_contents][]">
 
   <%= f.submit %>
 <% end %>
