Automatically backed up by Learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,10 +4,10 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
 
-  <%= f.text_field :author_name, list: "authors_autocomplete" %>
-  <datalist id="authors_autocomplete">
-    <% Author.all.each do |author| %>
-      <option value="<%= author.name %>">
+  <%= f.text_field :artist_name, list: "artists_autocomplete" %>
+  <datalist id="artists_autocomplete">
+    <% artist.all.each do |artist| %>
+      <option value="<%= artist.name %>">
     <% end %>
   </datalist>
 
