--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,9 +3,18 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <br />
+
+  <%= f.text_field :artist_name, list: "artists_autocomplete" %>
+  <datalist id="artists_autocomplete">
+    <% Artist.all.each do |artist| %>
+      <option value="<%= artist.name %>">
+    <% end %>
+  </datalist>
+
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+
+  <input id="song_notes_1" name="song[note_contents][]">
+  <input id="song_notes_2" name="song[note_contents][]">
 
   <%= f.submit %>
 <% end %>
-
-
